--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "dev": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "/src/app.js"
+    "start": "./src/app.js"
   },
   "keywords": [],
   "author": "",
